src/styles/footer/index.module.scss
.footer {
  color: #ffffff;
  height: 326px;
  width: 100%;
  box-sizing: border-box;
  padding: 40px 80px 30px 80px;
  border-top: 1px solid rgba(0, 0, 0, 0.5);
  border-bottom: 1px solid rgba(202, 196, 208, 1);
  background-color: rgba(25, 108, 103, 1);
  display: flex;
  flex-direction: row;
  position: relative;

  &__block {
    display: flex;
    margin-left: 91px;
    margin-right: 53px;
    flex-direction: column;

    &__title {
      font-weight: 600;
      font-size: 20px;
      line-height: 23.44px;
      margin-bottom: 32px;
    }

    &__text {
      font-weight: 400;
      font-size: 14px;
      line-height: 16.41px;
      display: flex;
      flex-direction: column;
      margin-bottom: 32px;

      span {
        margin-bottom: 8px;
      }
    }

    &__social {
      display: flex;
      flex-direction: column;

      h1 {
        font-weight: 600;
        font-size: 20px;
        line-height: 23.44px;
      }

      &__links {
        display: flex;
        flex-direction: row;

        h1 {
          padding-bottom: 16px;
        }

        svg {
          margin-right: 8px;
        }
      }
    }
  }

  &__subscribe {
    max-width: 407px;
    position: absolute;
    right: 80px;
    top: 40px;

    &__title {
      font-weight: 600;
      font-size: 20px;
      line-height: 23.44px;
    }

    &__text {
      display: block;
      height: 32px;
      font-weight: 400;
      font-size: 14px;
      line-height: 16.41px;
      text-align: right;
      margin-bottom: 8px;
    }

    &__form {
      white-space: nowrap;
      &__input {
        width: 292px;
        height: 48px;
        border: 1px rgba(255, 255, 255, 0.5);
        border-style: solid none solid solid;
        background: none;
        box-sizing: border-box;
        padding: 16px;
        background-color: rgba(255, 255, 255, 0.3);
        border-radius: 12px 0 0 12px;
        font-weight: 400;
        font-size: 14px;
        line-height: 16.41px;
        color: rgba(0, 0, 0, 0.5);
      }

      &__input::placeholder {
        font-weight: 400;
        font-size: 14px;
        line-height: 16.41px;
        color: rgba(0, 0, 0, 0.5);
      }

      &__input:focus {
        outline: none;
      }

      &__button {
        background-color: rgba(234, 67, 53, 0.71);
        border: 1px solid rgba(255, 255, 255, 0.5);
        height: 48px;
        color: #ffffff;
        font-weight: 400;
        font-size: 14px;
        line-height: 16.41px;
        width: 115px;
        border-radius: 0 12px 12px 0;
      }
    }
  }

  &__copyright {
    height: 48px;
    width: 100%;
    background-color: rgba(25, 108, 103, 1);
    display: flex;
    align-items: center;
    justify-content: end;

    span {
      color: #ffffff;
      font-weight: 400;
      font-size: 14px;
      line-height: 16.41px;
      padding-right: 22px;
    }

    span:last-child {
      padding-right: 58px;
    }
  }
}

